--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "@types/jest": "^26.0.13",
+    "@types/node": "^14.6.3",
+    "@types/react": "^16.9.49",
+    "@types/react-dom": "^16.9.8",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "minhas-series-server": "https://github.com/tuliofaria/minhas-series-server",
@@ -13,8 +17,9 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
-    "reactstrap": "^8.4.1"
+    "react-scripts": "^3.4.3",
+    "reactstrap": "^8.4.1",
+    "typescript": "^4.0.2"
   },
   "scripts": {
     "start": "npm-run-all build start-server",
@@ -39,5 +44,9 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:3002/"
+  "proxy": "http://localhost:3002/",
+  "devDependencies": {
+    "eslint": "^7.8.1",
+    "eslint-plugin-react": "^7.20.6"
+  }
 }
